// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyTrips should match the snapshot when loading 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#000000",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <WandererHeader />
  <ScrollViewMock>
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 40,
          "paddingVertical": 16,
          "textAlign": "center",
        }
      }
    >
      My Trips
    </Text>
    <View>
      <Text
        style={
          Object {
            "color": "red",
            "fontSize": 24,
            "paddingVertical": 5,
            "textAlign": "center",
          }
        }
      >
        Loading ...
      </Text>
      <Image
        alt="Loading..."
        source={
          Object {
            "testUri": "../../../assets/wanderer_spinner.gif",
          }
        }
        style={
          Object {
            "alignSelf": "center",
          }
        }
      />
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      style={
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#1C4263",
          "borderColor": "white",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "white",
          "fontSize": 30,
          "height": 60,
          "margin": 10,
          "padding": 10,
          "textAlign": "center",
          "width": "auto",
        }
      }
    >
      <Text
        onPress={[Function]}
        style={
          Object {
            "color": "white",
            "fontSize": 24,
            "fontWeight": "600",
            "paddingVertical": 5,
            "textAlign": "center",
          }
        }
      >
        Add a New Trip
      </Text>
    </TouchableOpacity>
  </ScrollViewMock>
  <WandererFooter
    navigate={[MockFunction]}
  />
</View>
`;

exports[`MyTrips should match the snapshot when trips array is populated 1`] = `
<View
  style={
    Object {
      "alignItems": "stretch",
      "backgroundColor": "#000000",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <WandererHeader />
  <ScrollViewMock>
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 40,
          "paddingVertical": 16,
          "textAlign": "center",
        }
      }
    >
      My Trips
    </Text>
    <View>
      <TouchableOpacity
        activeOpacity={0.2}
        key="0Paris"
        style={
          Object {
            "alignItems": "stretch",
            "borderColor": "white",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "color": "white",
            "fontSize": 30,
            "height": 60,
            "margin": 10,
            "padding": 10,
            "textAlign": "center",
            "width": "auto",
          }
        }
      >
        <Text
          key="Paris"
          onPress={[Function]}
          style={
            Object {
              "color": "white",
              "fontSize": 24,
              "paddingVertical": 5,
              "textAlign": "center",
            }
          }
        >
          Paris
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        activeOpacity={0.2}
        key="1Rome"
        style={
          Object {
            "alignItems": "stretch",
            "borderColor": "white",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "color": "white",
            "fontSize": 30,
            "height": 60,
            "margin": 10,
            "padding": 10,
            "textAlign": "center",
            "width": "auto",
          }
        }
      >
        <Text
          key="Rome"
          onPress={[Function]}
          style={
            Object {
              "color": "white",
              "fontSize": 24,
              "paddingVertical": 5,
              "textAlign": "center",
            }
          }
        >
          Rome
        </Text>
      </TouchableOpacity>
    </View>
    <TouchableOpacity
      activeOpacity={0.2}
      style={
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#1C4263",
          "borderColor": "white",
          "borderRadius": 8,
          "borderStyle": "solid",
          "borderWidth": 1,
          "color": "white",
          "fontSize": 30,
          "height": 60,
          "margin": 10,
          "padding": 10,
          "textAlign": "center",
          "width": "auto",
        }
      }
    >
      <Text
        onPress={[Function]}
        style={
          Object {
            "color": "white",
            "fontSize": 24,
            "fontWeight": "600",
            "paddingVertical": 5,
            "textAlign": "center",
          }
        }
      >
        Add a New Trip
      </Text>
    </TouchableOpacity>
  </ScrollViewMock>
  <WandererFooter
    navigate={[MockFunction]}
  />
</View>
`;
